Fixed clip path on Safari;

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ h3 {
 
 .avatar {
     max-height: 120px;
-    clip-path: circle(60px at center);
+    -webkit-clip-path: circle(60PX at 50% 50%);
+    clip-path: circle(60PX at 50% 50%);
 }
 
 .links {
